В тестирующий модуль добавлена возможность выдавать вердикты Memory Limit и Security Violated. Добавлен образец файла правил защиты для посылок на языке Java. В интерфейс TestingFileSupplier добавлен метод getConfigurationFolder(). Обновлена документация тестирующего модуля TestingModule.txt.