@@ -1,14 +1,21 @@
 package com.netcracker.testingmodule.language;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.Scanner;
 import java.util.concurrent.TimeUnit;
 import javax.tools.JavaCompiler;
 import javax.tools.ToolProvider;
 
 public class JavaLanguageToolkit implements LanguageToolkit {
+    
+    private static final String STACK_OVERFLOW_SIGN = "StackOverflowError";
+    private static final String HEAP_OVERFLOW_SIGN = "OutOfMemoryError";
+    private static final String SECURITY_VIOLATED_SIGN = "SecurityManager";
     
     private static final OutputStream EMPTY_ERROR_STREAM = new OutputStream() {
         @Override
@@ -17,7 +24,7 @@ public class JavaLanguageToolkit implements LanguageToolkit {
     };
     
     @Override
-    public int compile(Path sourceFile, Path compileFolder) throws FailException {
+    public int compile(Path sourceFile, Path compileFolder, Path configFolder) throws FailException {
         if (Files.notExists(sourceFile) || Files.notExists(compileFolder)) {
             throw new FailException("Compilation failed because files not found.");
         }
@@ -27,15 +34,20 @@ public class JavaLanguageToolkit implements LanguageToolkit {
 
     @Override
     public ExecutionInfo execute(Path compileFile, Path inputFile, Path outputFile,
-            int timeLimit, short memoryLimit) throws FailException, TimeLimitException {
-        if (Files.notExists(compileFile) || Files.notExists(inputFile) || Files.notExists(outputFile)) {
+            Path configFolder, int timeLimit, short memoryLimit)
+            throws FailException, TimeLimitException, MemoryLimitException, SecurityViolatedException {
+        Path policyPath = Paths.get(configFolder.toString(), "java_problem.policy");
+        if (Files.notExists(compileFile) || Files.notExists(inputFile) ||
+                Files.notExists(outputFile) || Files.notExists(policyPath)) {
             throw new FailException("Execution failed because files not found.");
         }
         try {
             Path compileFolder = compileFile.getParent();
             String className = getClassName(compileFile);
             String memoryOption = "-Xmx" + memoryLimit + "M";
-            ProcessBuilder processBuilder = new ProcessBuilder("java", memoryOption, "-Xss8M", className);
+            String policyOption = "-Djava.security.policy==" + policyPath.toString();
+            ProcessBuilder processBuilder = new ProcessBuilder("java", memoryOption, "-Xss8M",
+                    "-Djava.security.manager", policyOption, className);
             processBuilder.directory(compileFolder.toFile());
             processBuilder.redirectInput(inputFile.toFile());
             processBuilder.redirectOutput(outputFile.toFile());
@@ -48,7 +60,11 @@ public class JavaLanguageToolkit implements LanguageToolkit {
                     throw new TimeLimitException();
                 }
                 int decisionTime = (int)(System.currentTimeMillis() - start);
-                return new ExecutionInfo(process.exitValue(), decisionTime, null);
+                int exitValue = process.exitValue();
+                if (exitValue != 0) {
+                    analyseErrorStream(process.getErrorStream());
+                }
+                return new ExecutionInfo(exitValue, decisionTime, null);
             } finally {
                 if (process != null) {
                     process.destroyForcibly();
@@ -67,6 +83,18 @@ public class JavaLanguageToolkit implements LanguageToolkit {
             return fileName.substring(0, index);
         }
         return fileName;
+    }
+    
+    private void analyseErrorStream(InputStream errorStream) throws MemoryLimitException, SecurityViolatedException {
+        Scanner scanner = new Scanner(errorStream);
+        while (scanner.hasNextLine()) {
+            String line = scanner.nextLine();
+            if (line.contains(STACK_OVERFLOW_SIGN) || line.contains(HEAP_OVERFLOW_SIGN)) {
+                throw new MemoryLimitException();
+            } else if (line.contains(SECURITY_VIOLATED_SIGN)) {
+                throw new SecurityViolatedException();
+            }
+        }
     }
 
 }
